# EquationSolver

./: .gitignore  README.md
Equation Solver/: CharacterDetector.cpp  CharacterDetector.hpp  DataExtractor.cpp  DataExtractor.hpp  EquationSolver.hpp  MathEngine.cpp  MathEngine.hpp  MnistReader.cpp  MnistReader.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp  Ocr.cpp  Ocr.hpp  dictionary.txt  main.cpp
Equation Solver.xcodeproj/: project.pbxproj
Equation Solver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
EquationSolver.xcodeproj/: project.pbxproj
EquationSolver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
equation_solver/: CMakeLists.txt
equation_solver/include/: CharacterDetector.hpp  EquationSolver.hpp  MathEngine.hpp  MnistReader.hpp  Ocr.hpp
equation_solver/src/: CMakeLists.txt  CharacterDetector.cpp  DataExtractor.cpp  MnistReader.cpp  Ocr.cpp  demo.cpp
equation_solver/src/caffe-model/: dictionary.txt
equation_solver_caffe/: equation_solver.prototxt  equation_solver_gen_data_lmdb.py  equation_solver_read_images_write_lmbd.py  equation_solver_solver.prototxt  equation_solver_train_test.prototxt  snapshot_iter_3000.caffemodel  snapshot_iter_3000.solverstate  snapshot_iter_5000.caffemodel  snapshot_iter_5000.solverstate  snapshot_iter_671.caffemodel  snapshot_iter_671.solverstate  snapshot_iter_676.caffemodel  snapshot_iter_676.solverstate  snapshot_iter_718.caffemodel  snapshot_iter_718.solverstate  train_equation_solver.sh
equation_solver_caffe/equation_solver_lmdb/: data.mdb  lock.mdb
(+10 files in other folders)
